Update carousel styles for better visual appeal and interactive elements. Adjust timing and icons for a dynamic user experience. Fix Skills section layout for improved responsiveness and readability.

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -14,3 +14,11 @@ p {
 .skills:hover {
   filter: brightness(100%);
 }
+.collage-title {
+  font-size: clamp(0.5rem, 5vw, 1rem);
+}
+@media (min-width: 1135px) {
+  .collage-container {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
