--- a/src/pages/Skills/Skills.css
+++ b/src/pages/Skills/Skills.css
@@ -11,3 +11,11 @@
     color: white;
   }
 }
+
+@media (max-width: 1340px) {
+  #skillsbanner {
+    flex-direction: row;
+    align-items: start;
+    justify-content: center;
+  }
+}
